[project]
name = "comfyui-pil"
description = "Nodes: PIL Effects (Mexx), PIL TITLE (Mexx), PIL Merge Image (Mexx)"
version = "1.0.0"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/SoftMeng/ComfyUI-PIL"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI-PIL"
Icon = ""
